Modifica home css

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,7 @@
         <ul class="contact-list">
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><a href="tel:+393889005888">&#9742; +39 388 9005888 </a></li>
         </ul>
       </div>
 
