--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -2,7 +2,7 @@
    position:absolute;
    background:url('/img/overlay-bg.png'), url('/img/spiderman-ultralight.jpg') no-repeat center fixed;
    background-size:cover;
-   height: 100%;
+   height: 70%;
    width:100%;
    -webkit-background-size:cover;
    -moz-background-size:cover;
@@ -11,16 +11,17 @@
    line-height: 1.428571429;
    color: #ffffff !important;
    background-color: #191524;
-   margin-bottom: auto;
+   margin-bottom: 20px;
+   z-index: 2;
  }
  #bdiv a:hover {
    color: #fff;
  }
  #cdiv {
        position:absolute;
-       padding: 90px 20px 30px 10px;
+       padding: 0;
        margin: 0;
-       top:20%;
+       top:51%;
        left:50%;
        margin-right:-50%;
        transform:translate(-50%,-50%);
@@ -28,10 +29,15 @@
        display: block;
        overflow: hidden;
        clear: both;
+       z-index: 3;
+       font-size: 22px;
      }
+#cdiv a {
+  text-decoration: underline;
+}
 #footer-home {
   position:absolute;
-  padding: 600px 20px 360px 30px;
+  padding: 900px 20px 450px 30px;
   margin: 0;
   top: 50%;
   left:50%;
@@ -40,8 +46,30 @@
   text-align:center;
   display: block;
   overflow: hidden;
-
+  bottom: 0;
+  font-size: 15px;
+  color: $grey-color;
+  @extend %clearfix;
 }
+#descrizione-home{
+  color: #333;
+  line-height: 1.75em;
+}
+@include media-query($on-palm) {
+    #cdiv {
+      font-size: 15px;
+    }
+  }
+  @media screen and (min-width: 601px) and (max-width: 799px) {
+  #footer-home {
+      padding: 1000px 20px 550px 30px;
+  }
+}
+  @media screen and (max-width: 600px) {
+  #footer-home {
+    padding: 1090px 20px 750px 30px;
+  }
+  }
 .cookie {
     font-size: 10px;
     color: $grey-color-dark;
