--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -3,3 +3,25 @@
   margin: 0 auto;
   text-align: center;
 }
+.photo-gallery {
+  overflow: hidden;
+  margin-left: 0;
+}
+.photo-gallery ul {
+  margin: 0 auto;
+}
+.photo-gallery li {
+    list-style-type: none;
+    display: inline;
+
+    padding: 0;
+    overflow: hidden;
+    clear: both;
+}
+.photo-gallery li img {
+  width: 312px;
+  height: 272px;
+  margin: 5px;
+  border: 1px solid #ddd; /* Gray border */
+  border-radius: 4px;  /* Rounded border */
+}
