--- a/css/main.scss
+++ b/css/main.scss
@@ -51,5 +51,5 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting",
         "home",
-        "portfolio"
+        "gallery"
 ;
