--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -3,22 +3,17 @@
   margin: 0 auto;
   text-align: center;
 }
-.photo-gallery {
-  overflow: hidden;
+ul.photo-gallery {
   margin-left: 0;
+
 }
-.photo-gallery ul {
-  margin: 0 auto;
-}
-.photo-gallery li {
+ul.photo-gallery li {
     list-style-type: none;
     display: inline;
-
     padding: 0;
     overflow: hidden;
-    clear: both;
 }
-.photo-gallery li img {
+ul.photo-gallery li img {
   width: 312px;
   height: 272px;
   margin: 5px;
