--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -60,16 +60,31 @@
       font-size: 15px;
     }
   }
-@media screen and (min-width: 601px) and (max-width: 799px) {
+  @media screen and (min-width: 320px) and (max-width: 479px) {
   #footer-home {
-      padding: 1000px 20px 550px 30px;
+      padding: 1200px 20px 750px 30px;
   }
-}
-@media screen and (max-width: 600px) {
+  }
+  @media screen and (min-width: 480px) and (max-width: 599px) {
   #footer-home {
-    padding: 1090px 20px 750px 30px;
+      padding: 1090px 20px 750px 30px;
   }
-}
+  }
+  @media screen and (min-width: 600px) and (max-width: 800px) {
+  #footer-home {
+      padding: 1281px 20px 581px 30px;
+  }
+  }
+  @media screen and (min-width: 801px) and (max-width: 1024px) {
+  #footer-home {
+      padding: 1090px 20px 480px 30px;
+  }
+  }
+  @media screen and (min-width: 1024px) and (max-width: 1281px) {
+  #footer-home {
+      padding: 1281px 20px 581px 30px;
+  }
+  }
 .cookie {
     font-size: 10px;
     color: $grey-color-dark;
