aggiunti meta graph a head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,19 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <!-- Twitter Open Graph -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@spidermake" />
+  <meta name="twitter:creator" content="@spidermake" />
+  <meta name="twitter:title" content="Spidermake è webdesigner a Udine per siti web. Siti internet a Udine" />
+  <meta name="twitter:description" content="Web agency a Udine per realizzare siti internet professionali e creare siti web efficaci a prezzi onesti." />
+  <meta name="twitter:image" content="https://www.spidermake.com/img/spidermake-web-agency-udine-share.jpg" />
+	<!-- Facebook Open Graph -->
+  <meta property="fb:profile_id" content="1529185313761350"/>
+  <meta property="og:title" content="Spidermake è webdesigner a Udine per siti web. Siti internet a Udine" />
+  <meta property="og:description" content="Web agency a Udine per realizzare siti internet professionali e creare siti web efficaci a prezzi onesti." />
+  <meta property="og:url" content="https://www.spidermake.com/img/spidermake-web-agency-udine-share.jpg" />
+  <meta property="og:site_name" content="SpiderMake-Web-Agency-Udine" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://www.spidermake.com/img/spidermake-web-agency-udine-share.jpg" />
 </head>
