--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,7 +26,10 @@ header {
         color: $grey-color-dark;
     }
 }
-
+a.current {
+  box-shadow: 0 7px $brand-color;
+  text-decoration: none;
+}
 .site-nav {
     float: right;
     line-height: 56px;
@@ -44,6 +47,8 @@ header {
             margin-right: 20px;
         }
     }
+
+
 
     @include media-query($on-palm) {
         position: absolute;
