--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,16 @@ layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
+  <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
+   <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
+     <img src="https://www.spidermake.com/img/logo-1.jpg"/>
+     <meta itemprop="url" content="https://www.spidermake.com/img/logo-1.jpg">
+     <meta itemprop="width" content="319">
+     <meta itemprop="height" content="60">
+   </div>
+   <meta itemprop="name" content="Spidermake | Web Agency Udine">
+ </div>
+
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
