--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,3 +12,143 @@ layout: default
   </div>
 
 </article>
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "localBusiness",
+        "url": "https://www.spidermake.com/",
+        "name": "Spidermake è web designer a Udine. Agenzia web Udine per siti web.",
+        "logo": "https://www.spidermake.com/img/logo-1.jpg",
+        "image": "https://www.spidermake.com/img/spidermake-web-agency-udine-share.jpg",
+        "description": "Categoria: web designer, Area Servita: Friuli-Venezia Giulia, Menu: realizzazione siti web, creazione siti internet, SEO e posizionamento su motori di ricerca.",
+        "telephone": "+39-3889005888",
+        "contactPoint": {
+                        "@type": "ContactPoint",
+                        "telephone": "+39-3889005888",
+                        "contactType": "Customer service"
+                      },
+        "address":{"@type":"PostalAddress",
+        "addressLocality":"Udine, Italia",
+        "addressRegion":"Friuli-Venezia Giulia",
+        "postalCode":"I-33100",
+        "addressCountry":"Italy"},
+        "areaServed": {
+          "@type": "Place",
+          "geo": {
+            "@type": "GeoCircle",
+            "geoMidpoint": {
+            "@type": "GeoCoordinates",
+            "latitude": "46.067125",
+            "longitude": "13.237273"
+            },
+            "geoRadius": "100000"
+          }
+        },
+        "priceRange": "EUR 500 - EUR 2500",
+        "sameAs": ["https://www.facebook.com/spidermake/"
+        ],
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "46"
+        },
+      "review": [
+      {
+        "@type": "Review",
+        "author": "Google",
+        "datePublished": "2017",
+        "reviewRating": {
+          "@type": "Rating",
+          "bestRating": "5",
+          "ratingValue": "5",
+          "worstRating": "5"
+        }
+      }
+    ]
+  }
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Service",
+  "serviceType": "Web Designer",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "Spidermake, Web Agency a Udine",
+    "telephone": "+39-3889005888",
+    "address":{"@type":"PostalAddress",
+          "addressLocality":"Udine",
+          "addressRegion":"Friuli-Venezia Giulia",
+          "postalCode":"I-33100",
+          "addressCountry":"Italy"},
+    "priceRange": "EUR 500 - EUR 2500",
+    "image": "https://www.spidermake.com/img/spidermake-web-agency-udine-share.jpg"
+    },
+  "areaServed": {
+    "@type": "State",
+    "name": "Friuli-Venezia Giulia"
+  },
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Offerta: realizzazione siti web. Web designer a Udine a Trieste.",
+    "itemListElement": [
+      {
+        "@type": "OfferCatalog",
+        "name": "Siti web",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "web design"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "web restyling"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Realizzazione siti web mobile"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "system integration"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "consulente seo"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "posizionamento su motori di ricerca"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "creazione sito internet aziendale"
+            }
+          }
+        ]
+      }
+    ]
+  }
+}
+</script>
