--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -8,4 +8,25 @@
     </div>
     {% include footer.html %}
   </body>
+  <script type="application/ld+json">
+  {
+    "@context" : "http://schema.org",
+    "@type" : "WebSite",
+    "name" : "Spidermake è Agenzia Web a Udine. Realizzazione siti web. SEO.",
+    "url" : "https://www.spidermake.com/",
+    "potentialAction" : {
+      "@type" : "SearchAction",
+      "target" : "https://www.spidermake.com/cerca/?s={search}",
+      "query-input" : "required name=search"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context" : "http://schema.org",
+    "@type" : "WebPage",
+    "name" : "{{ page.title }}",
+    "url" : "https://www.spidermake.com{{ page.permalink }}"
+  }
+  </script>
 </html>
