--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,6 +30,20 @@ a.current {
   box-shadow: 0 7px $brand-color;
   text-decoration: none;
 }
+.googleSearch {
+padding: 0;
+  margin: 0;
+  width: 100%;
+  overflow: hidden;
+  text-align: right;
+}
+a.googleSearch {
+  float: right;
+  padding: 19px;
+}
+a.googleSearch:hover {
+  text-decoration: none;
+}
 .site-nav {
     float: right;
     line-height: 56px;
