--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,5 +21,22 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
+  <div class="comments">
+   <p><b>Ti è piaciuto questo articolo? Partecipa</b> alla discussione, <b/>condividilo</b> con i tuoi amici sui social: <b>aiuterai Spidermake a crescere!</b></p>
+   <div id="fb-root"></div>
+   <script>(function(d, s, id) {
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) return;
+     js = d.createElement(s); js.id = id;
+     js.src = 'https://connect.facebook.net/it_IT/sdk.js#xfbml=1&version=v2.11&appId=1935991236677882';
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));</script>
+   <div class="fb-like" data-href="https://www.spidermake.com" data-layout="standard" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+  {% if page.comments %}
+    <div class="post-comments">
+      {% include disqus.html %}
+    </div>
+  {% endif %}
+</div>
 </article>
+<script id="dsq-count-scr" src="//spidermake.disqus.com/count.js" async></script>
