aggiunti i title agli <a>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" title="Vai alla home page del sito web Spidermake web agency Udine." href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav" itemscope itemtype="http://www.schema.org/SiteNavigationElement">
       <a href="#" class="menu-icon">
@@ -15,23 +15,23 @@
 
       <div class="trigger">
 
-        <a itemprop="url" class="page-link {% if page.url contains '/about-enrico-caputo-web-designer-e-spidermake-web-agency-udine/' %}current{% endif %}" href="/about-enrico-caputo-web-designer-e-spidermake-web-agency-udine/">
+        <a itemprop="url" class="page-link {% if page.url contains '/about-enrico-caputo-web-designer-e-spidermake-web-agency-udine/' %}current{% endif %}" href="/about-enrico-caputo-web-designer-e-spidermake-web-agency-udine/" title="Chi siamo: Spidermake web agency Udine è agenzia web a Udine a trieste per realizzazione siti internet.">
         <span itemprop="name">About</span>
         </a>
 
-        <a itemprop="url" class="page-link {% if page.url contains '/servizi/posizionamento-sui-motori-di-ricerca-consulente-seo-a-udine/' %}current{% endif %}" href="/servizi/posizionamento-sui-motori-di-ricerca-consulente-seo-a-udine/">
+        <a itemprop="url" class="page-link {% if page.url contains '/servizi/posizionamento-sui-motori-di-ricerca-consulente-seo-a-udine/' %}current{% endif %}" href="/servizi/posizionamento-sui-motori-di-ricerca-consulente-seo-a-udine/" title="Vai a Spidermake web agency Udine: consulente SEO a Udine a Trieste. Posizionamento su motori di ricerca.">
         <span itemprop="name">SEO</span>
         </a>
 
-        <a itemprop="url" class="page-link {% if page.url contains '/servizi/realizzazione-siti-internet/' %}current{% endif %}" href="/servizi/realizzazione-siti-internet/">
+        <a itemprop="url" class="page-link {% if page.url contains '/servizi/realizzazione-siti-internet/' %}current{% endif %}" href="/servizi/realizzazione-siti-internet/" title="vai a Spidermake agenzia web specializzata in creazione e realizzazione di siti internet a Udine e a Trieste, Friuli-Venezia Giulia.">
         <span itemprop="name">Siti web</span>
         </a>
 
-        <a itemprop="url" class="page-link {% if page.url contains '/web-design' %}current{% endif %}" href="/web-design.html">
+        <a itemprop="url" class="page-link {% if page.url contains '/web-design' %}current{% endif %}" href="/web-design.html"title="Scopri gli strumenti di web-design utilizzati da Spidermake web agency Udine. Guarda come lavora e opera la agenzia web Spidermake a Udine a trieste.">
         <span itemprop="name">Strumenti</span>
         </a>
 
-        <a itemprop="url" class="page-link {% if page.url contains '/url-appuntamenti-web-agency-udine/' %}current{% endif %}" href="/url-appuntamenti-web-agency-udine/">
+        <a itemprop="url" class="page-link {% if page.url contains '/url-appuntamenti-web-agency-udine/' %}current{% endif %}" href="/url-appuntamenti-web-agency-udine/" title="Vai alla pagina contatti di Spidermake web agency. Chiedi un appuntamento per realizzare il tuo nuovo sito web professioanle a Udine a trieste.">
         <span itemprop="name">Contatti</span>
         </a>
 
