title aggiunti agli <a>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-          <li><a href="tel:+393889005888">&#9742; +39 388 9005888 </a></li>
+          <li><a href="mailto:{{ site.email }}" title="questa la e-mail di Spidermake web agency a Udine a trieste. Scrivi per chieddere informazioni e realizzare il tuo nuovo sito web.">{{ site.email }}</a></li>
+          <li><a href="tel:+393889005888" title="Telefono di Spidermake web agency a Udine a trieste. Telefona adesso per chieddere informazioni e realizzare il tuo nuovo sito web." >&#9742; +39 388 9005888 </a></li>
         </ul>
       </div>
 
@@ -35,7 +35,7 @@
 
     </div>
     <div class="cookie center">
-    <em>Continuando la navigazione dichiarate espressamente di accettate la <a href="/privacy-policy.html" rel="nofollow">privacy policy di Spidermake</a>.</em>
+    <em>Continuando la navigazione dichiarate espressamente di accettate la <a href="/privacy-policy.html" title="Privacy policy e cookie policy del sito www.spidermake.com">privacy policy di Spidermake</a>.</em>
     </div>
   </div>
 
