aggiunto fb like al footer

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
   <meta property="fb:profile_id" content="1529185313761350"/>
   <meta property="og:title" content="Spidermake è webdesigner a Udine per siti web. Siti internet a Udine" />
   <meta property="og:description" content="Web agency a Udine per realizzare siti internet professionali e creare siti web efficaci a prezzi onesti." />
-  <meta property="og:url" content="https://www.spidermake.com/img/spidermake-web-agency-udine-share.jpg" />
+  <meta property="og:url" content="https://www.spidermake.com/" />
   <meta property="og:site_name" content="SpiderMake-Web-Agency-Udine" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://www.spidermake.com/img/spidermake-web-agency-udine-share.jpg" />
