--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,17 @@
             {% include icon-linkedin.html username=site.linkedin_username %}
           </li>
           {% endif %}
+          <li><span class="icon">{% include icon-linkedin.svg %}</span> 
+            <div class="fb-like" data-href="https://www.spidermake.com/" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
+            <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/it_IT/sdk.js#xfbml=1&version=v2.11&appId=1683293785299856';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+          </li>
         </ul>
       </div>
 
