--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}" title="questa la e-mail di Spidermake web agency a Udine a trieste. Scrivi per chieddere informazioni e realizzare il tuo nuovo sito web.">{{ site.email }}</a></li>
-          <li><a href="tel:+393889005888" title="Telefono di Spidermake web agency a Udine a trieste. Telefona adesso per chieddere informazioni e realizzare il tuo nuovo sito web." >&#9742; +39 388 9005888 </a></li>
+          <li><a href="mailto:{{ site.email }}" title="questa la e-mail di Spidermake web agency a Udine a trieste. Scrivi per chiedere informazioni e realizzare il tuo nuovo sito web.">{{ site.email }}</a></li>
+          <li><a href="tel:+393889005888" title="Telefono di Spidermake web agency a Udine a trieste. Telefona adesso per chiedere informazioni e realizzare il tuo nuovo sito web." >&#9742; +39 388 9005888 </a></li>
         </ul>
       </div>
 
@@ -26,7 +26,7 @@
             {% include icon-linkedin.html username=site.linkedin_username %}
           </li>
           {% endif %}
-          <li><span class="icon">{% include icon-linkedin.svg %}</span> 
+          <li><span class="icon">{% include icon-linkedin.svg %}</span>
             <div class="fb-like" data-href="https://www.spidermake.com/" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
             <div id="fb-root"></div>
 <script>(function(d, s, id) {
